--- a/tabs-js/style.css
+++ b/tabs-js/style.css
@@ -10,7 +10,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    padding: 0 10px;
+    padding: 10px;
 }
 
 .tabs__wrap {
@@ -74,7 +74,11 @@ body {
 
 
 @media screen and (max-width: 400px) {
-    .tabs-content {
-        min-height: 500px
+    .tabs__content {
+        min-height: 500px;
+        padding: 20px;
+    }
+    .tabs__nav {
+        padding: 20px;
     }
 }
